--- a/peer/portal/templates/portal/index.html
+++ b/peer/portal/templates/portal/index.html
@@ -27,7 +27,7 @@
         <h1>{% trans "Latest Entities" %}</h1>
         <ul class="entityList">
         {% for entity in entities %}
-        {% render_entity_as_list_item entity %}
+        {% render_entity_as_list_item entity MODERATION_ENABLED%}
         {% endfor %}
         </ul>
 
