Changes for Django 1.8.2

--- a/peer/entity/templates/entity/delegate_list.html
+++ b/peer/entity/templates/entity/delegate_list.html
@@ -16,7 +16,7 @@
                  value="{{ delegate.pk }}"
                  />
           <span class="user-name">{% safefullname delegate %}</span>
-          <button type="button" id="{% url 'remove_delegate' entity_id,delegate.id %}"
+          <button type="button" id="{% url 'remove_delegate' entity_id delegate.id %}"
                   class="button remove-delegate-button">
             {% trans "Remove" %}
           </button>
