--- a/peer/entity/templates/entity/edit_entity_group.html
+++ b/peer/entity/templates/entity/edit_entity_group.html
@@ -18,7 +18,7 @@
     {{ form.as_p }}
     <p>Some tips about the query field:</p>
     <ul class="simpleList">
-      <li>The query is composed by one ore more XPATH expressions separated
+      <li>The query is composed by one or more XPATH expressions separated
         by the <strong>&amp;</strong> character.</li>
       <li>Only a subset of the XPATH standard is actually implemented. Check
         <a href="http://effbot.org/zone/element-xpath.htm">this subset
