navigation menu on left sidebar

--- a/peer/entity/templates/entity/edit_entity_group.html
+++ b/peer/entity/templates/entity/edit_entity_group.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-<section class="mainContent">
+<section>
   <hgroup>
     {% if entity_group %}
     <h1>{% trans "Edit entity group" %}</h1>
