--- a/peer/entity/templates/entity/search_results.html
+++ b/peer/entity/templates/entity/search_results.html
@@ -9,6 +9,8 @@
 
 {% include "portal/menu.html" %}
 
+{% include "account/menu.html" %}
+
 <section class="mainContent">
   <hgroup>
     <h1>{% trans "Search results" %}</h1>
