--- a/peer/entity/templates/entity/list_item.html
+++ b/peer/entity/templates/entity/list_item.html
@@ -18,7 +18,7 @@
 
 <a class="entityName" href="{{ entity.get_absolute_url }}">{{ entity }}</a> {% if moderation_enabled and entity.state != "published"%} (Pending moderation) {% endif %}
 <ul>
-  <li><a href="{% url 'search_entities' %}?domain={{ entity.domain }}">{{ entity.domain }}</a></li>
+  <li><a href="{% url 'entities:search_entities' %}?domain={{ entity.domain }}">{{ entity.domain }}</a></li>
 
   {% if entity.owner %}
   <li>
