--- a/peer/entity/templates/entity/menu.html
+++ b/peer/entity/templates/entity/menu.html
@@ -6,21 +6,21 @@
 {% block contentMenu %}
     <ul>
       {% canedit entity %}
-      <li><a href="{% url 'entity_view' entity.id %}">{% trans "Details" %}</a></li>
-      <li><a href="{% url 'edit_metadata' entity.id %}">{% trans "Edit metadata" %}</a></li>
+      <li><a href="{% url 'entities:entity_view' entity.id %}">{% trans "Details" %}</a></li>
+      <li><a href="{% url 'entities:edit_metadata' entity.id %}">{% trans "Edit metadata" %}</a></li>
       {% if MODERATION_ENABLED and entity.state != "published"%}
             {% canapprove entity %}
-      <li><a href="{% url 'edit_metadata' entity.id %}">{% trans "Approve/Reject metadata changes" %}</a></li>
+      <li><a href="{% url 'entities:edit_metadata' entity.id %}">{% trans "Approve/Reject metadata changes" %}</a></li>
             {% endcanapprove %}
       {% endif %}
-      <li><a href="{% url 'entity_remove' entity.id %}">{% trans "Remove" %}</a></li>
+      <li><a href="{% url 'entities:entity_remove' entity.id %}">{% trans "Remove" %}</a></li>
       {% canchangeteam entity %}
-      <li><a href="{% url 'sharing' entity.id %}">{% trans "Team permissions" %}</a></li>
+      <li><a href="{% url 'entities:sharing' entity.id %}">{% trans "Team permissions" %}</a></li>
       {% endcanchangeteam %}
       {% if entity.is_metarefreshable %}
-        <li><a href="{% url 'metarefresh_edit' entity.id %}">{% trans "Metarefresh" %}</a></li>
+        <li><a href="{% url 'entities:metarefresh_edit' entity.id %}">{% trans "Metarefresh" %}</a></li>
       {% endif %}
       {% endcanedit %}
-      <li><a href="{% url 'monitoring_prefs' entity.id %}">{% trans "Monitor endpoints" %}</a></li>
+      <li><a href="{% url 'entities:monitoring_prefs' entity.id %}">{% trans "Monitor endpoints" %}</a></li>
     </ul>
 {% endblock %}
