--- a/peer/templates/base.html
+++ b/peer/templates/base.html
@@ -53,9 +53,11 @@
           -webkit-box-shadow: -1px 0 0 {{ INDEX_HEADING_COLOR }};
       }
     </style>
+    {% block extrahead %}
+    {% endblock %}
   </head>
 
-  <body>
+  <body class="{% block bodyclass %}{% endblock %}">
     <header id="header">
       {% block header %}
       <hgroup>
@@ -98,11 +100,11 @@
 
     {% if not user.is_anonymous %}
     <ul id="user-menu">
-        <li><a href="{% url 'entities_list' %}">{% trans "Full list of entities" %}</a></li>
+        <li><a href="{% url 'entities:entities_list' %}">{% trans "Full list of entities" %}</a></li>
         <li><a href="{% url 'account_profile' %}">{% trans "My domains and entities" %}</a></li>
         <li><a href="{% url 'domain_add' %}">{% trans "Add domain" %}</a></li>
-        <li><a href="{% url 'entity_add' %}">{% trans "Add entity" %}</a></li>
-        <li><a href="{% url 'entity_group_add' %}">{% trans "Add entity group" %}</a></li>
+        <li><a href="{% url 'entities:entity_add' %}">{% trans "Add entity" %}</a></li>
+        <li><a href="{% url 'entities:entity_group_add' %}">{% trans "Add entity group" %}</a></li>
         <li><a href="{% url 'account_profile_edit' %}">{% trans "Change personal information" %}</a></li>
         <li><a href="{% url 'password_change' %}">{% trans "Change password" %}</a></li>
         <li><a href="{% url 'invite_friend' %}">{% trans "Invite friend" %}</a></li>
