Fixed the styles of slogan, who can do what and general conditions

--- a/peer/portal/templates/portal/index.html
+++ b/peer/portal/templates/portal/index.html
@@ -29,8 +29,8 @@
 
     </section>
   {% else %}
+    {{ slogan|safe }}
     <div class="centerText">
-      <h3>{{ slogan|safe }}</h3>
       <p><a class="button" href="{% url 'auth_login' %}">{% trans "Sign in" %}</a></p>
     </div>
   {% endif %}
