Css slogan, who can do what and general conditions

--- a/peer/portal/templates/portal/index.html
+++ b/peer/portal/templates/portal/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-<div class="menus">
+  <div class="menus">
     <form id="search" class="left clear" method="get" action="{% url 'search_entities' %}">
         <input type="text" name="query" id="query" autofocus="autofocus" />
     </form>
@@ -18,7 +18,7 @@
 
     <!-- your actions menu -->
     {% include "account/menu.html" %}
-</div>
+  </div>
     <section id="home-content" class="mainContent">
         <h1>{% trans "Your Entities" %}</h1>
         <ul class="entityList">
@@ -29,9 +29,9 @@
 
     </section>
 {% else %}
-  <div class="slogan-text">
-  {{ slogan|safe }}
-  </div>
+  <section>
+    {{ slogan|safe }}
+  </section>
   <div class="centerText">
     <p><a class="button" href="{% url 'auth_login' %}">{% trans "Sign in" %}</a></p>
   </div>
