--- a/peer/portal/templates/portal/who_can_do_what.html
+++ b/peer/portal/templates/portal/who_can_do_what.html
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block content %}
-    {{ wcdw|safe }}
+    <section>
+        {{ wcdw|safe }}
+    </section>
 
 {% endblock %}
