--- a/peer/templates/base.html
+++ b/peer/templates/base.html
@@ -82,8 +82,10 @@
 
     {% include "messages.html" %}
 
+    <section>
     {% block content %}
     {% endblock %}
+    </section>
 
     <footer>
       <ul>
