users can choose role

--- a/peer/portal/templates/portal/base_menu.html
+++ b/peer/portal/templates/portal/base_menu.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<nav class="shadow left clear">
+<nav class="shadow left clear peer-menu">
   {% block topMenu %}
     <div class="topMenu"><span class="hidden">{% trans "Filters" %}</span></div>
   {% endblock %}
