--- a/peer/staticfiles/css/listings.css
+++ b/peer/staticfiles/css/listings.css
@@ -172,6 +172,208 @@ table.orderable-initalized .order-cell, body>tr>td.order-cell {
     display: none;
 }
 
+/* FILTER COLUMN */
+
+#peer-changelist-filter {
+/*    position: absolute;
+    top: 0;
+    right: 0; */
+    z-index: 1000;
+    width: 160px;
+    border-left: 1px solid #ddd;
+    background: #efefef;
+    margin: 0;
+}
+
+#peer-changelist-filter h2 {
+    font-size: 11px;
+    padding: 2px 5px;
+    border-bottom: 1px solid #ddd;
+}
+
+#peer-changelist-filter h3 {
+    font-size: 12px;
+    margin-bottom: 0;
+}
+
+#peer-changelist-filter ul {
+    padding-left: 0;
+    margin-left: 10px;
+}
+
+#peer-changelist-filter li {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+#peer-changelist-filter a {
+    color: #999;
+}
+
+#peer-changelist-filter a:hover {
+    color: #036;
+}
+
+#peer-changelist-filter li.selected {
+    border-left: 5px solid #ccc;
+    padding-left: 5px;
+    margin-left: -10px;
+}
+
+#peer-changelist-filter li.selected a {
+    color: #5b80b2 !important;
+}
+
+/* CHANGELIST TABLES */
+
+#peer-changelist {
+    position: relative;
+    width: 100%;
+}
+
+#peer-changelist .toplinks {
+    border-bottom: 1px solid #ccc !important;
+}
+
+#peer-changelist .paginator {
+    color: #666;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    background: white url(../img/nav-bg.gif) 0 180% repeat-x;
+    overflow: hidden;
+}
+
+#peer-changelist table {
+    width: 100%;
+}
+
+#peer-changelist table thead th {
+    padding: 0;
+    white-space: nowrap;
+    vertical-align: middle;
+}
+
+#peer-changelist table thead th.action-checkbox-column {
+    width: 1.5em;
+    text-align: center;
+}
+
+#peer-changelist table tbody td, #changelist table tbody th {
+    border-left: 1px solid #ddd;
+}
+
+#peer-changelist table tbody td:first-child, #changelist table tbody th:first-child {
+    border-left: 0;
+    border-right: 1px solid #ddd;
+}
+
+#peer-changelist table tbody td.action-checkbox {
+    text-align:center;
+}
+
+#peer-changelist table tfoot {
+    color: #666;
+}
+
+/* TOOLBAR */
+
+#peer-changelist #toolbar {
+    padding: 3px;
+    border-bottom: 1px solid #ddd;
+    background: #e1e1e1 url(../img/nav-bg.gif) top left repeat-x;
+    color: #666;
+}
+
+#peer-changelist #toolbar form input {
+    font-size: 11px;
+    padding: 1px 2px;
+}
+
+#peer-changelist #toolbar form #searchbar {
+    padding: 2px;
+}
+
+#peer-changelist #changelist-search img {
+    vertical-align: middle;
+}
+
+/* Search */
+
+.change-list #peer-changelist.filtered .results, .change-list #peer-changelist.filtered .paginator, #peer-changelist.filtered #toolbar, #peer-changelist.filtered div.xfull {
+    margin-right: 0px !important;
+    margin-left: 25px !important;
+    width: auto !important;
+}
+
+div#peer-changelist label {
+    display: inline-block;
+}
+
+/* ACTIONS */
+
+#peer-changelist.filtered .actions {
+    margin-right: 0px !important;
+    margin-left: 25px !important;
+    border-right: 1px solid #ddd;
+}
+
+
+#peer-changelist table input {
+    margin: 0;
+}
+
+#peer-changelist table tbody tr.selected {
+    background-color: #FFFFCC;
+}
+
+#peer-changelist .actions {
+    color: #999;
+    padding: 3px;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #ddd;
+    background: white url(../img/nav-bg-reverse.gif) 0 -10px repeat-x;
+}
+
+#peer-changelist .actions.selected {
+    background: #fffccf;
+    border-top: 1px solid #fffee8;
+    border-bottom: 1px solid #edecd6;
+}
+
+#peer-changelist .actions span.all,
+#peer-changelist .actions span.action-counter,
+#peer-changelist .actions span.clear,
+#peer-changelist .actions span.question {
+    font-size: 11px;
+    margin: 0 0.5em;
+    display: none;
+}
+
+#peer-changelist .actions:last-child {
+    border-bottom: none;
+}
+
+#peer-changelist .actions select {
+    border: 1px solid #aaa;
+    margin-left: 0.5em;
+    padding: 1px 2px;
+}
+
+#peer-changelist .actions label {
+    font-size: 11px;
+    margin-left: 0.5em;
+}
+
+#peer-changelist #action-toggle {
+    display: none;
+}
+
+#peer-changelist .actions .button {
+    font-size: 11px;
+    padding: 1px 2px;
+}
+
 /*  */
 
 ul.object-tools a.addlink {
