--- a/peer/portal/templates/portal/who_can_do_what.html
+++ b/peer/portal/templates/portal/who_can_do_what.html
@@ -3,7 +3,7 @@
 {% load i18n entity_renderers %}
 
 {% block extralinks %}
-<link href="{% url 'entities_feed' %}" rel="alternate" type="application/rss+xml" title="{% trans "Entities feed" %}" />
+<link href="{% url 'entities:entities_feed' %}" rel="alternate" type="application/rss+xml" title="{% trans "Entities feed" %}" />
 {% endblock %}
 
 {% block content %}
