--- a/peer/entity/templates/entity/edit_entity_group.html
+++ b/peer/entity/templates/entity/edit_entity_group.html
@@ -12,7 +12,7 @@
     {% endif %}
   </hgroup>
 
-  <form action="{% if entity_group %}{% url 'entities:entity_group_edit' entity_group.id %}{% else %}{% url 'entity_group_add' %}{% endif %}" method="post">{% csrf_token %}
+  <form action="{% if entity_group %}{% url 'entities:entity_group_edit' entity_group.id %}{% else %}{% url 'entities:entity_group_add' %}{% endif %}" method="post">{% csrf_token %}
     <fieldset>
     {{ form.as_p }}
     <p>Some tips about the query field:</p>
@@ -38,7 +38,7 @@
     <fieldset class="actionRow">
       {% if entity_group %}
       <input class="button" type="submit" value="{% trans "Save changes" %}" />
-      {% trans "or" %} <a class="button" href="{% url 'entity_group_view' entity_group.id %}">{% trans "Cancel" %}</a>
+      {% trans "or" %} <a class="button" href="{% url 'entities:entity_group_view' entity_group.id %}">{% trans "Cancel" %}</a>
       {% else %}
       <input class="button" type="submit" value="{% trans "Add entity group" %}" />
       {% trans "or" %} <a class="button" href="{% url 'account_profile' %}">{% trans "Cancel" %}</a>
