--- a/peer/templates/base.html
+++ b/peer/templates/base.html
@@ -76,7 +76,6 @@
                     <button id="user-menu-btn">Select an action</button>
                 </div>
             </li>
-            <li><a class="button" href="{% url 'toggle_user_role' %}">{{ role_btn_label }}</a></li>
             <li><a class="button" href="{% url 'auth_logout' %}">{% trans "Logout" %}</a></li>
           {% endif %}
         {% endblock %}
@@ -111,6 +110,9 @@
         <li><a href="{% url 'domain_add' %}">{% trans "Add domain" %}</a></li>
         <li><a href="{% url 'entities:entity_add' %}">{% trans "Add entity" %}</a></li>
         <li><a href="{% url 'entities:entity_group_add' %}">{% trans "Add entity group" %}</a></li>
+        {% if is_md_registrar %}
+        <li><a href="{% url 'toggle_user_role' %}">{{ role_btn_label }}</a></li>
+        {% endif %}
         <li><a href="{% url 'account_profile_edit' %}">{% trans "Change personal information" %}</a></li>
         <li><a href="{% url 'password_change' %}">{% trans "Change password" %}</a></li>
         <li><a href="{% url 'invite_friend' %}">{% trans "Invite friend" %}</a></li>
