--- a/peer/entity/templates/entity/edit_metadata.html
+++ b/peer/entity/templates/entity/edit_metadata.html
@@ -44,7 +44,7 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 {% endif %}
 
-<script type="text/javascript" src="{{ STATIC_URL }}js/require-2.1.18.min.js" data-main="{{ STATIC_URL }}saml-metadata-editor/js/main"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/require-2.1.18.min.js" data-main="{{ STATIC_URL }}saml-metadata-editor/js/custom-main"></script>
 
 <script type="text/javascript" src="{{ STATIC_URL }}js/SAMLmetaJS/samlmeta.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/SAMLmetaJS/mdreader.js"></script>
@@ -86,17 +86,17 @@
             // different and the namespaces are handled in a different way
             // See https://github.com/UNINETT/SAMLmetaJS/issues/7
             $("textarea#id_metadata_text").before("<p><span class='ui-icon ui-icon-alert'></span>Your browser does not support advanced XML manipulation via javascript so you can not use the advanced metadata editor. Please upgrade your browser for a better experience.</p>");
-            $("textarea#xmlcontent").change(set_dirty)
+            $("textarea#id_metadata_text").change(set_dirty)
         } else {
-            /*$("textarea#id_metadata_text").SAMLmetaJS({
-                'showValidation': true,
-                'showValidationLevel': {
-                    'info': false,
-                    'ok': false,
-                    'warning': true,
-                    'error': true
-                }
-            });*/
+            // $("textarea#id_metadata_text").SAMLmetaJS({
+            //     'showValidation': true,
+            //     'showValidationLevel': {
+            //         'info': false,
+            //         'ok': false,
+            //         'warning': true,
+            //         'error': true
+            //     }
+            // });
             $("form input[name=commit_changes]").click(function () {
                 $("form input[name=button_clicked]").val("commit_changes");
                 $("a[href='#rawmetadata']").click();
