--- a/peer/entity/templates/entity/edit_metadata.html
+++ b/peer/entity/templates/entity/edit_metadata.html
@@ -44,7 +44,8 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 {% endif %}
 
-<script type="text/javascript" src="{{ STATIC_URL }}js/require-2.1.18.min.js" data-main="{{ STATIC_URL }}saml-metadata-editor/js/custom-main"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/require-2.1.18.min.js" data-main="{{ STATIC_URL }}saml-metadata-editor/js/main"></script>
+
 
 <script type="text/javascript" src="{{ STATIC_URL }}js/SAMLmetaJS/samlmeta.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/SAMLmetaJS/mdreader.js"></script>
@@ -154,6 +155,35 @@
             closeButtonLabel: '{% trans "Cancel" %}',
             noMessageAlert: '{% trans "Please write a commit message" %}',
             noTOUAcceptedAlert: '{% trans "You must accept the terms of use" %}'
+        });
+
+        $("#samlmetaeditor").bind('customSamlEditor', function() {
+            console.log('custommmm')
+            document.getElementById('toXML').click();
+
+            $("textarea#xmlcontent").val($("textarea#id_metadata_text").val());
+
+            document.getElementById('toTree').click();
+
+            $(".actionRow").hide();
+
+            $("#toTree").bind('click', function() {
+                $(".actionRow").hide();
+            });
+
+            $("#toXML").bind('click', function() {
+                $(".actionRow").show();
+
+            });
+
+            $("#xmlTab").bind("DOMSubtreeModified", function() {
+                $("textarea#xmlcontent").change();
+            });
+
+            $("textarea#xmlcontent").bind('change', function() {
+                $("#id_metadata_text").val($("textarea#xmlcontent").val());
+            });
+
         });
 
     });
