--- a/peer/account/templates/account/menu.html
+++ b/peer/account/templates/account/menu.html
@@ -5,14 +5,11 @@
 
 {% block contentMenu %}
     <ul>
-      <li><a href="{% url 'account_profile' %}">{% trans "Domains and entities" %}</a></li>
+      <li><a href="{% url 'account_profile' %}">{% trans "Domains" %}</a></li>
       <li><a href="{% url 'domain_add' %}">{% trans "Add domain" %}</a></li>
+      <li><a href="{% url 'entities:entities_list' %}">{% trans "Entities" %}</a></li>
       <li><a href="{% url 'entities:entity_add' %}">{% trans "Add entity" %}</a></li>
       <li><a href="{% url 'entities:entity_group_add' %}">{% trans "Add entity group" %}</a></li>
-      {% if_local_session %}
-      <li><a href="{% url 'account_profile_edit' %}">{% trans "Change personal information" %}</a></li>
-      <li><a href="{% url 'password_change' %}">{% trans "Change password" %}</a></li>
-      {% endif %}
       <li><a href="{% url 'invite_friend' %}">{% trans "Invite friend" %}</a></li>
       {% if user.is_superuser %}
       <li><a href="{% url 'manage_admin_team' %}">{% trans "Manage admin team" %}</a></li>
