navigation in domain detail

--- a/peer/account/templates/account/profile.html
+++ b/peer/account/templates/account/profile.html
@@ -8,7 +8,7 @@
 <section class="mainContent">
 
   <hgroup>
-    <h1>{% trans "Welcome" %}, {% safefullname user %}</h1>
+    <h1>{% trans "Domains" %}</h1>
   </hgroup>
 
   <h2 class="separator">{% trans "Your domains" %}</h2>
