--- a/peer/entity/templates/entity/change_list.html
+++ b/peer/entity/templates/entity/change_list.html
@@ -1,39 +1,37 @@
 {% extends "base.html" %}
+
 {% load i18n entity_urls admin_static admin_list %}
 
-{% block extracss %}
-  {{ block.super }}
-  {% if cl.formset %}
-    <link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}" />
-  {% endif %}
-  {% if cl.formset or action_form %}
-    <script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
-  {% endif %}
-  {{ media.css }}
-  {% if not actions_on_top and not actions_on_bottom %}
-    <style>
-      #changelist table thead th:first-child {width: inherit}
-    </style>
-  {% endif %}
+{% block extralinks %}
+<link href="{% url 'entities:entities_feed' %}" rel="alternate" type="application/rss+xml" title="{% trans "Entities feed" %}" />
 {% endblock %}
-
-{% block extrahead %}
-{{ block.super }}
-{{ media.js }}
-{% if action_form %}{% if actions_on_top or actions_on_bottom %}
-<script type="text/javascript">
-(function($) {
-    $(document).ready(function($) {
-        $("tr input.action-select").actions();
-    });
-})(django.jQuery);
-</script>
-{% endif %}{% endif %}
-{% endblock %}
-
-{% block bodyclass %}{{ block.super }} app-{{ opts.app_label }} model-{{ opts.model_name }} change-list{% endblock %}
 
 {% block content %}
+<div id="home-meta">
+
+{% if user.is_authenticated %}
+  <div class="menus">
+    <!-- your actions menu -->
+    {% include "account/menu.html" %}
+
+    {% if cl.full_result_count > 0 %}
+        {% block filters %}
+            {% if cl.has_filters %}
+              <div id="peer-changelist-filter" class="clear left shadow">
+                <h2>{% trans 'Filter' %}</h2>
+                {% for spec in cl.filter_specs %}{% admin_list_filter cl spec %}{% endfor %}
+              </div>
+            {% endif %}
+        {% endblock %}
+    {% endif %}
+  </div>
+
+{% endif %}
+
+<section id="home-content" class="mainContent">
+    <h1>{% trans "Entities" %}</h1>
+{% if user.is_authenticated and cl.full_result_count > 0 %}
+
   <div id="content-main">
     {% block object-tools %}
       {% if has_add_permission %}
@@ -55,18 +53,9 @@
         </p>
         {{ cl.formset.non_form_errors }}
     {% endif %}
-    <div class="module{% if cl.has_filters %} filtered{% endif %}" id="changelist">
+    <div class="module{% if cl.has_filters %} filtered{% endif %}" id="peer-changelist">
       {% block search %}{% search_form cl %}{% endblock %}
       {% block date_hierarchy %}{% date_hierarchy cl %}{% endblock %}
-
-      {% block filters %}
-        {% if cl.has_filters %}
-          <div id="changelist-filter">
-            <h2>{% trans 'Filter' %}</h2>
-            {% for spec in cl.filter_specs %}{% admin_list_filter cl spec %}{% endfor %}
-          </div>
-        {% endif %}
-      {% endblock %}
 
       <form id="changelist-form" action="" method="post"{% if cl.formset.is_multipart %} enctype="multipart/form-data"{% endif %} novalidate>{% csrf_token %}
       {% if cl.formset %}
@@ -75,13 +64,27 @@
 
       {% block result_list %}
           {% if action_form and actions_on_top and cl.full_result_count %}{% admin_actions %}{% endif %}
-          {% result_list cl %}
+          <div class="result_entities"> 
+              {% result_list cl %}
+          </div>
           {% if action_form and actions_on_bottom and cl.full_result_count %}{% admin_actions %}{% endif %}
       {% endblock %}
       <div id="peer-paginator">
-      {% block pagination %}{% pagination cl %}{% endblock %}
+      {% block pagination %}
+          <div class="pagination_entities">
+              {% pagination cl %}
+          </div>
+      {% endblock %}
       </div>
       </form>
     </div>
   </div>
+
+    </section>
+{% else %}
+  <div class="centerText">
+    <p><a class="button" href="{% url 'auth_login' %}">{% trans "Sign in" %}</a></p>
+  </div>
+{% endif %}
+
 {% endblock %}
